--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "clientId": "44D3170033EA46FC990E84108CB4E141",
-  "tenantId": "f2f8f8d8-3fa0-466b-a5fe-dbe3c76807e9"
+  "clientId": "<Get this from My Apps>",
+  "tenantId": "<Check out TenantHelper.cs>"
 }
